# Dataset4Lerobot

./: README.md  dataset_download.py  pyproject.toml  requirements.txt
rlds2lerobot/: README.md  generate_metadata.py  xarm6_to_lerobot_v1.py  xarm6_to_lerobot_v2.py  xarm6_to_lerobot_v3.py
robomind2lerobot/: README.md  requirements.txt  robomind2lerobot.py
