[project]
name = "dataset-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=14.4.0",
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
]
